// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container component it renders properly 1`] = `
<div
  className="container mx-auto px-5 md:py-20 py-5 min-h-80"
>
  <p>
    Hello
  </p>
</div>
`;

exports[`Container component it renders properly when bgColor prop is set 1`] = `
<div
  className="bg-gray-75"
>
  <div
    className="container mx-auto px-5 md:py-20 py-5 min-h-80"
  >
    <p>
      Hello
    </p>
  </div>
</div>
`;

exports[`Container component it renders properly with non-default props 1`] = `
<div
  className="container mx-auto px-5 25 500 hello-there"
>
  <p>
    Hello
  </p>
</div>
`;
